--- a/01-first-azure-pipelines.yml
+++ b/01-first-azure-pipelines.yml
@@ -22,6 +22,7 @@ jobs:
       echo See https://aka.ms/yaml
     displayName: 'Run a multi-line script'
 - job: job2
+  dependsOn:  Job1
   steps:
   - script: echo Jobs 2!
     displayName:  'Run a one -line script'
