--- a/02-undersandig-stages.yml
+++ b/02-undersandig-stages.yml
@@ -15,22 +15,32 @@ stages:
   - job:  Firstjob
     steps:
     - bash: echo "Build first Job"
+    - bash:  echo $(PipelineLevelVariable)
   - job:  SecondJob
     steps:
     - bash: echo "bUILD SECOND JOB"
       
 - stage:  DevDeploy
+  variables:
+    environment: Dev
+  dependsOn:  Build
   jobs:
   - job:  FirstjobDevDeploy
     steps:
     - bash: echo "devdeploy first Job"
+    - bash:  echo $(environment)DeployJob
 - stage:  QADeploy
+  dependsOn: Build
   jobs:
   - job:  Firstjobqa
     steps:
-    - bash: echo "qay first Job"
+    - bash: echo $(environment)Deployjob
    
 - stage:  ProdDeploy
+  dependsOn:
+  - QADeploy
+  - DevDeploy
+  
   jobs:
   - job:  Firstjobprod
     steps:
